Add MSA QC report step

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,6 +11,7 @@ evolution:
   n_homologs: 2000
   e_value: 0.001
   msa_file: results/module1/alignment.fasta
+  msa_qc_report: results/module1/msa_qc_report.csv
   conservation_pdb: results/module1/target_conserved.pdb
   unaligned_homologs: results/module1/unaligned_homologs.fasta
   mmseqs_db_dir: data/databases/uniref50
