--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,5 +1,7 @@
 configfile: 'config/config.yaml'
 
+USE_MMSEQS = config["evolution"].get("use_mmseqs", False)
+
 # --- REGLA MAESTRA GLOBAL ---
 rule all:
     conda:
@@ -27,36 +29,40 @@ rule fetch_clean_pdb:
         'scripts/module1_prep_structure.py'
 
 # [cite_start]MEJORA: Aumentamos a 2000 hits y usamos base de datos 'nr' [cite: 4]
-rule run_blast:
-    conda:
-        "../environment.yaml"
-    input: 
-        fasta="results/module1/target.fasta"
-    output: 
-        xml="results/module1/blast_results.xml"
-    params:
-        n_hits=2000,       # Aumentado para potencia estadística en DCA
-        e_val=0.001,
-        db="nr"            # Base de datos masiva (Non-Redundant)
-    script: 
-        'scripts/module1_run_blast.py'
-
-rule run_mmseqs:
-    input:
-        fasta="results/module1/target.fasta"
-    output:
-        fasta_homologs="results/module1/homologs_unaligned.fasta"
-    threads: 4
-    conda:
-        "workflow/envs/mmseqs.yaml"
-    script:
-        'scripts/module1_run_mmseqs.py'
+if not USE_MMSEQS:
+    rule run_blast:
+        conda:
+            "workflow/envs/mmseqs.yaml"
+        input: 
+            fasta="results/module1/target.fasta"
+        output: 
+            xml="results/module1/blast_results.xml",
+            fasta_homologs=config["evolution"]["unaligned_homologs"],
+            method_log="results/module1/homolog_method.log"
+        params:
+            n_hits=2000,       # Aumentado para potencia estadística en DCA
+            e_val=0.001,
+            db="nr"            # Base de datos masiva (Non-Redundant)
+        script: 
+            'scripts/module1_run_blast.py'
+else:
+    rule run_mmseqs:
+        input:
+            fasta="results/module1/target.fasta"
+        output:
+            fasta_homologs=config["evolution"]["unaligned_homologs"],
+            method_log="results/module1/homolog_method.log"
+        threads: 4
+        conda:
+            "workflow/envs/mmseqs.yaml"
+        script:
+            'scripts/module1_run_mmseqs.py'
 
 rule parse_and_align:
     conda:
         "envs/mafft.yaml"
     input: 
-        xml="results/module1/blast_results.xml",
+        homologs=config["evolution"]["unaligned_homologs"],
         original_fasta="results/module1/target.fasta"
     output: 
         fasta_msa=config["evolution"]["msa_file"]
