--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -72,13 +72,17 @@ rule map_conservation:
     input:
         pdb=config["structure"]["clean_pdb"],
         msa=config["evolution"]["msa_file"]
-    output: pdb_conserved=config["evolution"]["conservation_pdb"]
+    output:
+        pdb_conserved=config["evolution"]["conservation_pdb"],
+        pdb_msa_map=config["evolution"]["pdb_msa_map"]
     script: 'scripts/module1_map_entropy.py'
 
 rule run_pydca:
     conda:
         "envs/pydca.yaml"
-    input: msa=config["evolution"]["msa_file"]
+    input:
+        msa=config["evolution"]["msa_file"],
+        pdb_msa_map=config["evolution"]["pdb_msa_map"]
     output:
         plot="results/module1/dca_distribution.png",
         report="results/module1/dca_top_contacts.csv"
@@ -88,7 +92,9 @@ rule run_pydca:
     script: 'scripts/module1_pydca.py'
 
 rule run_coevolution_mi:
-    input: msa=config["evolution"]["msa_file"]
+    input:
+        msa=config["evolution"]["msa_file"],
+        pdb_msa_map=config["evolution"]["pdb_msa_map"]
     output: plot="results/module1/coevolution_profile.png"
     params: target_res=config["structure"]["target_residue"]
     script: 'scripts/module1_coevolution_mi.py'
