--- a/environment.yaml
+++ b/environment.yaml
@@ -3,15 +3,10 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python>=3.10
-  - snakemake>=7.32
+  - python=3.10.*
+  - snakemake=7.32.4
   - pandas>=1.5
   - biopython>=1.79
-  - rdkit>=2023.09
-  - jupyterlab>=4.0
-  - snakemake>=7.32.4
-  - pandas>=1.5.0
-  - biopython>=1.79
   - rdkit>=2023.03.1
-  - jupyterlab>=4.0.0
+  - jupyterlab>=4.0
   - openbabel>=3.1.1
