--- a/workflow/envs/mafft.yaml
+++ b/workflow/envs/mafft.yaml
@@ -1,10 +1,9 @@
-name: htvs-mafft
 name: mafft
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  - python=3.10.*
+  - snakemake=7.32.4
   - mafft>=7.520
-  - python>=3.10
   - biopython>=1.79
-  - mafft>=7.505
