--- a/workflow/envs/mmseqs.yaml
+++ b/workflow/envs/mmseqs.yaml
@@ -1,11 +1,9 @@
-name: htvs-mmseqs
 name: mmseqs2
 channels:
   - conda-forge
   - bioconda
 dependencies:
+  - python=3.10.*
+  - snakemake=7.32.4
   - mmseqs2>=15.6f452
   - biopython>=1.79
-  - python>=3.10
-  - biopython>=1.79
-  - mmseqs2>=14.7e284
