--- a/workflow/envs/pydca.yaml
+++ b/workflow/envs/pydca.yaml
@@ -5,6 +5,7 @@ channels:
 dependencies:
     # Usamos Python 3.8 para compatibilidad con librerías viejas
     - python=3.8
+    - snakemake=7.32.4
     - pip
     # Pre-instalamos numpy/scipy viejos con Conda para evitar compilarlos
     - numpy<1.18
