--- a/workflow/envs/rdkit.yaml
+++ b/workflow/envs/rdkit.yaml
@@ -3,5 +3,6 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python>=3.10
+  - python=3.10.*
+  - snakemake=7.32.4
   - rdkit>=2023.03.1
