Update smina outputs and logs

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -15,7 +15,7 @@ rule all:
         "results/module2/qc_report.csv",
         "results/module2/preparation_done.flag",
         expand("results/module3/docking/{ligand}_out.pdbqt", ligand=LIGANDS_PDBQT),
-        expand("results/module3/docking/{ligand}_score.log", ligand=LIGANDS_PDBQT)
+        expand("results/module3/logs/{ligand}.log", ligand=LIGANDS_PDBQT),
         directory("results/module3/ligands_pdbqt")
 
 # --- MÓDULO 1: INTELIGENCIA BIOLÓGICA ---
@@ -289,7 +289,7 @@ rule run_smina:
         ligand="results/module3/ligands_pdbqt/{ligand}.pdbqt"
     output:
         docked="results/module3/docking/{ligand}_out.pdbqt",
-        log="results/module3/docking/{ligand}_score.log"
+        log="results/module3/logs/{ligand}.log"
     params:
         center_x=config["docking"]["center_x"],
         center_y=config["docking"]["center_y"],
@@ -301,6 +301,7 @@ rule run_smina:
         """
         set -euo pipefail
         mkdir -p results/module3/docking
+        mkdir -p results/module3/logs
         smina --receptor {input.receptor} \
             --ligand {input.ligand} \
             --center_x {params.center_x} \
