Add smina score parsing step

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -16,6 +16,7 @@ rule all:
         "results/module2/preparation_done.flag",
         expand("results/module3/docking/{ligand}_out.pdbqt", ligand=LIGANDS_PDBQT),
         expand("results/module3/logs/{ligand}.log", ligand=LIGANDS_PDBQT),
+        "results/module3/docking_scores.csv",
         directory("results/module3/ligands_pdbqt")
 
 # --- MÓDULO 1: INTELIGENCIA BIOLÓGICA ---
@@ -314,6 +315,17 @@ rule run_smina:
             --log {output.log}
         """
 # --- MÓDULO 3: EXPORTACIÓN PDBQT ---
+
+rule parse_smina_results:
+    input:
+        logs=expand("results/module3/logs/{ligand}.log", ligand=LIGANDS_PDBQT),
+        poses=expand("results/module3/docking/{ligand}_out.pdbqt", ligand=LIGANDS_PDBQT)
+    output:
+        scores="results/module3/docking_scores.csv"
+    params:
+        pose_dir="results/module3/docking"
+    script:
+        "scripts/module3_parse_smina_results.py"
 
 rule export_ligands_pdbqt_module3:
     conda:
