--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -19,6 +19,8 @@ rule all:
         "results/module3/docking_scores.csv",
         "results/module3/top_candidates.csv",
         "results/module3/top_candidates.smi",
+        "results/module3/gnina_scores.csv",
+        "results/module3/consensus_final.csv",
         expand("results/module3/logs/{ligand}.log", ligand=LIGANDS_PDBQT),
         "results/module3/docking_scores.csv",
         directory("results/module3/ligands_pdbqt")
@@ -340,6 +342,29 @@ rule select_top_candidates:
     params:
         top_percent=config["docking"].get("top_candidates_percent", 5)
     script: "scripts/module3_select_top_candidates.py"
+
+rule run_gnina_rescore:
+    conda:
+        "envs/gnina.yaml"
+    input:
+        receptor="results/module1/target_prepared.pdbqt",
+        top_candidates="results/module3/top_candidates.csv"
+    output:
+        scores="results/module3/gnina_scores.csv"
+    params:
+        pose_dir="results/module3/docking"
+    script:
+        "scripts/module3_run_gnina_rescore.py"
+
+rule build_consensus_final:
+    conda:
+        "../environment.yaml"
+    input:
+        gnina_scores="results/module3/gnina_scores.csv"
+    output:
+        consensus="results/module3/consensus_final.csv"
+    script:
+        "scripts/module3_build_consensus.py"
 # --- MÓDULO 3: EXPORTACIÓN PDBQT ---
 
 rule parse_smina_results:
