--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -21,11 +21,11 @@ rule all:
         "results/module3/top_candidates.smi",
         "results/module3/gnina_scores.csv",
         "results/module3/consensus_final.csv",
-        directory("results/module3/vina"),
-        directory("results/module3/vina_logs"),
+        "results/module3/vina",
+        "results/module3/vina_logs",
         expand("results/module3/logs/{ligand}.log", ligand=LIGANDS_PDBQT),
         "results/module3/docking_scores.csv",
-        directory("results/module3/ligands_pdbqt")
+        "results/module3/ligands_pdbqt"
 
 # --- MÓDULO 1: INTELIGENCIA BIOLÓGICA ---
 
@@ -348,7 +348,6 @@ rule select_top_candidates:
 rule run_gnina_rescore:
     conda:
         "envs/gnina.yaml"
-rule run_vina_top:
     input:
         receptor="results/module1/target_prepared.pdbqt",
         top_candidates="results/module3/top_candidates.csv"
@@ -363,11 +362,11 @@ rule build_consensus_final:
     conda:
         "../environment.yaml"
     input:
-        gnina_scores="results/module3/gnina_scores.csv"
+        gnina_scores="results/module3/gnina_scores.csv",
+        receptor="results/module1/target_prepared.pdbqt",
+        top_candidates="results/module3/top_candidates.csv"
     output:
-        consensus="results/module3/consensus_final.csv"
-    script:
-        "scripts/module3_build_consensus.py"
+        consensus="results/module3/consensus_final.csv",
         vina_dir=directory("results/module3/vina"),
         vina_logs=directory("results/module3/vina_logs")
     params:
@@ -438,6 +437,7 @@ rule build_consensus_final:
                 subprocess.run(cmd, check=True)
         PY
         """
+
 # --- MÓDULO 3: EXPORTACIÓN PDBQT ---
 
 rule parse_smina_results:
