--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -18,13 +18,16 @@ rule all:
         # Módulo 2: Ligandos
         "results/module2/preparation_done.flag",
         "results/module2/qc_report.csv",
+        "results/module2/library_dedup.smi",
+        "results/module2/library_enumerated.smi",
 
         # Módulo 3: Docking y Consenso
         "results/module3/docking_scores.csv",
         "results/module3/top_candidates.csv",
         "results/module3/gnina_scores.csv",
+        "results/module3/final_hits.csv",
         "results/module3/consensus_final.csv",
-        "results/final_report.txt"
+        "results/final_report.txt",
         "results/module3/vina",
         "results/module3/vina_logs",
         expand("results/module3/logs/{ligand}.log", ligand=LIGANDS_PDBQT),
