Update rule all pdbqt outputs

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -6,7 +6,6 @@ USE_MMSEQS = config["evolution"].get("use_mmseqs", False)
 # Detectamos los ligandos basándonos en la salida del Módulo 2 (SDFs)
 # Esto asegura que Snakemake sepa qué trabajos de docking lanzar.
 LIGANDS = glob_wildcards("results/module2/ligands_3d/{ligand}.sdf").ligand
-LIGANDS_PDBQT = glob_wildcards("results/module3/ligands_pdbqt/{ligand}.pdbqt").ligand
 
 # --- REGLA MAESTRA GLOBAL ---
 rule all:
@@ -31,9 +30,9 @@ rule all:
         "results/final_report.txt",
         "results/module3/vina",
         "results/module3/vina_logs",
-        expand("results/module3/logs/{ligand}.log", ligand=LIGANDS_PDBQT),
+        expand("results/module3/logs/{ligand}.log", ligand=LIGANDS),
         "results/module3/docking_scores.csv",
-        "results/module3/ligands_pdbqt"
+        expand("results/module3/ligands_pdbqt/{ligand}.pdbqt", ligand=LIGANDS)
 
 # =========================================
 # MÓDULO 1: INTELIGENCIA BIOLÓGICA
