--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -32,7 +32,7 @@ rule all:
         "results/module3/vina_logs",
         expand("results/module3/logs/{ligand}.log", ligand=LIGANDS),
         "results/module3/docking_scores.csv",
-        directory("results/module3/ligands_pdbqt")
+        expand("results/module3/ligands_pdbqt/{ligand}.pdbqt", ligand=LIGANDS)
 
 # =========================================
 # MÓDULO 1: INTELIGENCIA BIOLÓGICA
