Fix docking scores input list

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -31,10 +31,7 @@ rule all:
         "results/module3/vina",
         "results/module3/vina_logs",
         expand("results/module3/ligands_pdbqt/{ligand}.pdbqt", ligand=LIGANDS),
-        expand("results/module3/logs/{ligand}.log", ligand=LIGANDS),
-        "results/module3/docking_scores.csv"
-        "results/module3/docking_scores.csv",
-        expand("results/module3/ligands_pdbqt/{ligand}.pdbqt", ligand=LIGANDS)
+        expand("results/module3/logs/{ligand}.log", ligand=LIGANDS)
 
 # =========================================
 # MÓDULO 1: INTELIGENCIA BIOLÓGICA
