Use contact-filtered hits for consensus

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -343,6 +343,7 @@ rule export_ligands_pdbqt_module3:
         "envs/openbabel.yaml"
     input:
         gnina="results/module3/gnina_scores.csv",
+        final_hits="results/module3/final_hits.csv",
         top="results/module3/top_candidates.csv"
     output:
         consensus="results/module3/consensus_final.csv",
