--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -328,7 +328,7 @@ rule run_gnina_rescore:
         top_candidates="results/module3/top_candidates.csv"
     output: scores="results/module3/gnina_scores.csv"
     params:
-        pose_dir="results/module3/docking"
+        pose_dir="results/module3/docking",
         gnina_wrapper="workflow/scripts/gnina_container_wrapper.sh"
     script: "workflow/scripts/module3_run_gnina_rescore.py"
 
